Aligned layout breaks if panel too wide for icon-only enum + property without label text #38602

Closed
opened 2014-02-11 19:55:11 +01:00 by CodeManX · 7 comments
Member

System Information
Windows 7

Blender Version
Broken: 2.69

Short description of error
A (multi) enum and a another enum without label text with aligned=True in the parent layout element don't work well together.

If panel (view3d toolshelf) is too wide, the second property disappears, no warnings/errors in console.

bug_enum_icon_only_and_no_text_prop.png

Exact steps for others to reproduce the error
Run attached script, scroll down in 3D View Toolshelf and scale panel

bug_enum_icon_only_and_no_text_prop.py

**System Information** Windows 7 **Blender Version** Broken: 2.69 **Short description of error** A (multi) enum and a another enum without label text with aligned=True in the parent layout element don't work well together. If panel (view3d toolshelf) is too wide, the second property disappears, no warnings/errors in console. ![bug_enum_icon_only_and_no_text_prop.png](https://archive.blender.org/developer/F76931/bug_enum_icon_only_and_no_text_prop.png) **Exact steps for others to reproduce the error** Run attached script, scroll down in 3D View Toolshelf and scale panel [bug_enum_icon_only_and_no_text_prop.py](https://archive.blender.org/developer/F76930/bug_enum_icon_only_and_no_text_prop.py)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @CodeManX

Added subscriber: @CodeManX

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Brecht Van Lommel self-assigned this 2014-02-12 14:52:53 +01:00

This issue was referenced by blender/blender-addons-contrib@64eea27533

This issue was referenced by blender/blender-addons-contrib@64eea27533b84a271ad66ea27b937c4b8096f14e

This issue was referenced by blender/blender@64eea27533

This issue was referenced by blender/blender@64eea27533b84a271ad66ea27b937c4b8096f14e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@64eea27533.

Closed by commit blender/blender@64eea27533.
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#38602
No description provided.