Fix T38602: Aligned layout breaks if panel too wide